--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
+        <WarningsAsErrors>nullable</WarningsAsErrors>
         <ImplicitUsings>enable</ImplicitUsings>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
@@ -12,6 +13,10 @@
         <PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="9.4.2" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.9"/>
         <PackageReference Include="Microsoft.Extensions.Caching.Hybrid" Version="9.9.0" />
+        <PackageReference Include="Microsoft.Extensions.ML" Version="4.0.2" />
+        <PackageReference Include="Microsoft.ML" Version="4.0.2" />
+        <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.22.1" />
+        <PackageReference Include="Microsoft.ML.OnnxTransformer" Version="4.0.2" />
         <PackageReference Include="Scalar.AspNetCore" Version="2.8.5" />
     </ItemGroup>
 
